[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Lights/spot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BasementDweller.gd" type="Script" id=2]
[ext_resource path="res://Sounds/SFXs/sound_design_effect_air_pipe_pressure_022.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/SFXs/hurtt.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 2.87841, 0, 0, Vector2( 0.5, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.990196, 0 ), -4.09545, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.39
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 26.78
initial_velocity_random = 1.0
angular_velocity = 90.0
angular_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 5.36
linear_accel_random = 0.26
radial_accel = 16.07
radial_accel_random = 0.75
damping = 30.36
damping_random = 0.56
angle = 128.6
angle_random = 0.76
scale = 0.2
scale_random = 0.6
scale_curve = SubResource( 2 )
color = Color( 0, 0, 0, 1 )
hue_variation = -0.14

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.39
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 1.0
angular_velocity = 90.0
angular_velocity_random = 0.8
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 5.36
linear_accel_random = 0.26
radial_accel = 16.07
radial_accel_random = 0.75
damping = 30.36
damping_random = 0.56
angle = 128.6
angle_random = 0.76
scale_random = 0.6
scale_curve = SubResource( 2 )
color = Color( 3.47, 2.91, 8.09, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[node name="Enemy" type="Area2D"]
z_index = 52
collision_layer = 32
collision_mask = 32
script = ExtResource( 2 )
damage = 30
speed = 30
speed_cap = 0.2

[node name="Particles2D" type="Particles2D" parent="."]
amount = 50
local_coords = false
draw_order = 1
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="Damage" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
amount = 50
local_coords = false
draw_order = 1
process_material = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -4.062
max_distance = 500.0
attenuation = 1.41421
bus = "SFXNorm"

[node name="Dying" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -4.875
max_distance = 500.0
attenuation = 1.41421
bus = "SFXNorm"

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
